# Automotive-Diagnostic-Security-Analyzer

./: .gitignore  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
autosec_analyzer/: __init__.py  analyzer.py  cli.py  gui.py  models.py  parser.py  reporting.py  uds.py
sample_data/: synthetic_diagnostic_log.txt
tests/: test_analyzer.py
